Fixed remove icon being off center for first entry in form item list

--- a/src/styles/components/form-items/_form-item-list.scss
+++ b/src/styles/components/form-items/_form-item-list.scss
@@ -14,8 +14,7 @@
 
             &:has(.mynah-chat-item-form-items-container .mynah-form-input-label:not(:empty)) {
                 > .mynah-form-item-list-row-remove-button {
-                    height: 75%;
-                    align-self: self-end;
+                    margin-top: var(--mynah-sizing-5);
                 }
             }
 
